# localforge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  devlog.md  pyproject.toml
.github/workflows/: ci.yml  script-lint.yml
cli/: local
docs/: agent-development.md  architecture.md  configuration.md  multi-device.md  quickstart.md  workflow-editor-plan.md
examples/: agents.yaml.example  config.yaml.example
examples/systemd/: localforge-gateway.service
scripts/: check_script_parity.py  install-hooks.sh  pre-commit  setup-worker-darwin.sh  setup-worker-termux.sh  setup-worker.ps1  setup-worker.sh  validate_templates.py
src/localforge/: __init__.py  __main__.py  agents.yaml  auth.py  cache.py  chunking.py  client.py  config.py  embeddings.py  enrollment.py  exceptions.py  gateway.py  gpu_pool.py  log.py  migrations.py  models_catalog.py  paths.py  server.py  telegram_bot.py
src/localforge/agents/: approval.py  base.py  code_watcher.py  daily_digest.py  health_monitor.py  index_maintainer.py  message_bus.py  news_agent.py  research_agent.py  run_supervisor.py  supervisor.py  task_queue.py  yaml_schema_validator.py
src/localforge/dashboard/: routes.py
src/localforge/dashboard/static/: app.js  index.html  manifest.json  setup-worker.ps1  setup-worker.sh  style.css  sw.js
src/localforge/dashboard/static/js/: agents.js  api.js  auth.js  chat.js  config.js  kg-worker.js  knowledge.js  main.js  media.js  mesh.js  notes.js  research.js  search.js  status.js  training.js  (+3 more)
src/localforge/knowledge/: graph.py  research_sessions.py
src/localforge/media/: processor.py
src/localforge/tools/: __init__.py  agents_tools.py  analysis.py  chat.py  compute.py  config_tools.py  context.py  diff.py  filesystem.py  generation.py  git.py  infrastructure.py  knowledge.py  memory.py  orchestration.py  parallel.py  presets.py  rag.py  semantic.py  sessions.py  shell.py  training.py  utils.py  validation.py  web.py
src/localforge/workers/: detect.py  device_worker.py
src/localforge/workflows/: engine.py  node_specs.py  scanner.py  schema.py
src/localforge/workflows/templates/: deep-analyze.yaml  full-review.yaml  onboard-project.yaml  strict-schema-validate.yaml  validate-templates.yaml
tests/: conftest.py  test_approval.py  test_auth.py  test_auto_context.py  test_cache.py  test_chunking.py  test_client_routing.py  test_config_consolidation.py  test_db_paths.py  test_detect.py  test_enrollment.py  test_exceptions.py  test_filesystem_tools.py  test_knowledge_graph.py  test_log.py  test_mesh.py  test_mesh_improvements.py  test_mesh_onboarding.py  test_mesh_persistence.py  test_message_bus.py  test_migrations.py  test_paths.py  test_shell_tool.py  test_template_validation.py  test_tool_registry.py  test_utils.py  test_validate_templates_tool.py  test_workflow_engine.py
